# electron-survey

./: .gitignore  .gitmodules  CLAUDE.md  COVERAGE_AUDIT.md  Makefile  README.md  REPORT.md  fix_urls.py  main.py  pyproject.toml  validate_urls.py
.github/: zizmor.yml
.github/workflows/: dependabot-automerge.yml  pages.yml  process.yml  tests.yml  update-data.yml
commands/: __init__.py  audit.py  cleanup.py  cves.py  dedupe.py  electron_index.py  evidence.py  extract_apps.py  fetch_versions.py  freshness.py  popularity.py  process.py  report.py  stats.py  summary.py
data/: apps.yml  cves.yml  freshness.yml  popularity.yml  summary.yml  versions.txt  zoo-extra.yml  zoo.yml
data/apps/: 18xx-maker.yml  1clipboard.yml  1password.yml  3fa.yml  5eclient.yml  abird.yml  abstract.yml  actual-budget.yml  adrive.yml  advanced-rest-client.yml  aechoterm.yml  aeon.yml  aero-browser.yml  aesir-wallet.yml  aether.yml  affine.yml  agendapp.yml  agent-tars.yml  agora-flat.yml  ai-assistant-studio.yml  ai-browser.yml  ai-chat.yml  ai-gate.yml  ai-writer.yml  aider-desk.yml  aigcpanel.yml  aigepu.yml  aihub.yml  aingdesk.yml  aione.yml  aionui.yml  airi.yml  (+2073 more)
docs/: Gemfile  _config.yml  about.md  established.md  flagship.md  index.md  minimal.md  popular.md  unranked.md
processors/: npm.py
steps/: aur-version.py  aur.py  github.com.py  homebrew.py  source.py  static-downloads.py  which-electron.py
tests/: steploader.py  test_aur.py  test_cves.py  test_dedupe.py  test_electron_index.py  test_evidence.py  test_github.py  test_source.py  test_summary.py  test_which_electron.py
(+10 files in other folders)
