[project]
name = "electronic-survey"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "click>=8.3.3",
    "pyyaml>=6.0",
    "requests>=2.33.0",
    "semantic-version>=2.10",
]

[dependency-groups]
dev = [
    "pytest>=8",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
